--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,9 @@ code {
 }
 
 .login-form {
-  max-width: 300px;
+  max-width: 400px;
+  margin: "auto";
+  margin-top: 100;
 }
 .login-form-forgot {
   float: right;
